Creating an event for admin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">login</string>
+    <string name="app_name">Ticket Pulse</string>
     <string name="title_activity_event_web_view">EventWebView</string>
 </resources>
